--- a/css/style.css
+++ b/css/style.css
@@ -8,5 +8,7 @@ footer {
 }
 main {
     display: flex;
+    padding: 100px 45px;
 }
-nav ul {display: inline;}
+nav ul {display: flex;margin:0 auto; list-style: none;}
+nav ul li {margin:5px 10px;padding: 5px 15px; border-radius: 5px; background-color: azure;}
