--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,1 @@
-header {
-    height: 100px;
-    background-color: bisque;
-}
-footer {
-    height: 100px;
-    background-color: bisque;  
-}
-main {
-    display: flex;
-    padding: 100px 45px;
-}
-nav ul {display: flex;margin:0 auto; list-style: none;}
-nav ul li {margin:5px 10px;padding: 5px 15px; border-radius: 5px; background-color: azure;}
+/* Style for Homework #1 by Bryhadyr Kostiantyn */
